# rust-lancedb-graphrag

./: .gitignore  LICENSE  README.md  buf.gen.yaml  buf.yaml  docker-compose.yml  final_implementation_decision_document.md  implementation_plan.md  jaeger-config.yaml
.agents/: gsd-file-manifest.json  gsd-install-state.json  settings.json
.claude/: gsd-file-manifest.json  gsd-install-state.json
.claude/agents/: gsd-advisor-researcher.md  gsd-ai-researcher.md  gsd-assumptions-analyzer.md  gsd-code-fixer.md  gsd-code-reviewer.md  gsd-codebase-mapper.md  gsd-debug-session-manager.md  gsd-debugger.md  gsd-doc-classifier.md  gsd-doc-synthesizer.md  gsd-doc-writer.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-integration-checker.md  gsd-intel-updater.md  gsd-mempalace-curator.md  gsd-nyquist-auditor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-project-researcher.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-auditor.md  (+5 more)
.codex/: config.toml  gsd-file-manifest.json  gsd-install-state.json  hooks.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
config/: config.dev.toml  config.example.toml  config.toml
engine/: Cargo.toml  build.rs
engine/src/: main.rs
engine/src/chunker/: mod.rs  tests.rs
engine/src/client/: mod.rs  tests.rs
engine/src/db/: mod.rs  tests.rs
engine/src/pb/lancet/v1/: lancet.v1.rs  lancet.v1.tonic.rs
gateway/: atlas.hcl  go.mod  go.sum  main.go  main_test.go  sqlc.yaml
proto/: buf.gen.yaml  buf.yaml
(+379 files in other folders)
