[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = "0.14"
tonic-prost = "0.14"
prost = "0.14"
tracing = "0.1"
tracing-subscriber = "0.3"
config = { version = "0.15.25", features = ["toml"] }
dashmap = "6.2.1"
lancedb = "0.31.0"
serde = { version = "1.0.228", features = ["derive"] }
arrow-array = "58.3.0"
arrow-schema = "58.3.0"
pulldown-cmark = "0.10"
tiktoken-rs = "0.6"
