[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "~1.53", features = ["rt-multi-thread", "macros"] }
tonic = "~0.14"
tonic-prost = "~0.14"
prost = "~0.14"
tracing = "~0.1"
tracing-subscriber = "~0.3"
config = { version = "~0.15", features = ["toml"] }
dashmap = "~6.2"
lancedb = "~0.31"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
arrow-array = "~58.3"
arrow-schema = "~58.3"
pulldown-cmark = "~0.13"
tiktoken-rs = "~0.12"
reqwest = { version = "~0.13", default-features = false, features = ["json", "rustls"] }
futures = "~0.3"
